--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -7,6 +7,12 @@ body,
   margin: 0;
   padding: 0;
 }
+#app {
+  text-align: center;
+  width: 1200px;
+  margin: 0 auto;
+  min-width: 1200px;
+}
 a,span,p,div {
   margin: 0;
   padding: 0;
