--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -11,6 +11,12 @@ a,span,p,div {
   margin: 0;
   padding: 0;
 }
+.mt20 {
+  margin-top: 20px;
+}
+.mt60 {
+  margin-top: 60px;
+}
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
