--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -7,15 +7,18 @@ body,
   margin: 0;
   padding: 0;
 }
-a,span,p,div {
+h1,h2,h3,h4,h5,h6,hr,a,span,p,div {
   margin: 0;
   padding: 0;
 }
-.mt20 {
-  margin-top: 20px;
+input:focus,
+textarea:focus {
+  outline: none;
 }
-.mt60 {
-  margin-top: 60px;
+a {
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
 }
 body {
   text-rendering: optimizeLegibility;
@@ -23,4 +26,32 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'PingFang SC', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji';
   color: #333;
+}
+.mt20 {
+  margin-top: 20px;
+}
+.mt60 {
+  margin-top: 60px;
+}
+.f14 {
+  font-size: 14px;
+}
+.f16 {
+  font-size: 16px;
+}
+.f18 {
+  font-size: 18px;
+}
+.f20 {
+  font-size: 20px;
+}
+.f22 {
+  font-size: 22px;
+}
+.f24 {
+  font-size: 24px;
+}
+.limit1200 {
+  width: 1200px;
+  margin: 0 auto;
 }
