--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -26,6 +26,9 @@ body {
   font-family: 'PingFang SC', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji';
   color: #333;
 }
+.mr20 {
+  margin-right: 20px;
+}
 .mt20 {
   margin-top: 20px;
 }
